# bitstream

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  test_cpp.yml
include/: bitstream.h  utils.h
tests/: test.cpp
